Using Events Binding click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<h1>Events Binding</h1>
+<button [disabled]="btnStatus">Send</button>
+<button (click)="toggleButton()">Toggle Button</button>
+<p>Edad {{ data.age }}</p>
+<button (click)="increaseAge()">Age ++</button>
+<button (click)="decreaseAge()">Age --</button>
+
+<hr />
 <h1>Property Binding</h1>
 <button [disabled]="btnStatus">Send</button>
 <input type="text" [value]="data.name" /><br />
